--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
 asgiref==3.8.1
+Brotli==1.1.0
+click==8.1.7
+dj-database-url==2.2.0
 Django==4.2.13
 djangorestframework==3.15.1
+gunicorn==22.0.0
+h11==0.14.0
+packaging==24.0
+psycopg2-binary==2.9.9
+python-dotenv==1.0.1
 sqlparse==0.5.0
 typing_extensions==4.12.0
+uvicorn==0.30.0
+whitenoise==6.6.0
